Hardcode client scheme for aud claim matching (temp)